--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		}
 	</style>
 	<script>
-		var href = 'http://cross.wiget.pp.ua/fs/philips';
+		var href = 'https://cinema.net.ua/';
 		location.href = href + location.search + location.hash;
 	</script>
 </body>
